Refactor#1. Localization, all stations, virsi